chap3/memo.txt
pythonではインデントが重要なので注意：

条件分岐

if xx :
    yy（半角x4でインデント、4つが慣例）

>>> age = 29
>>> if (18 <= age): ★age >= 18でも可
...     print('チケットを売る')
...
チケットを売る
>>>

>>> age = 15
>>> if (18 <= age):
...     print('チケットを売る')
...
>>> ※何も表示されないでおｋ

elseを追加

>>> age = 16
>>> age
16
>>> if(age>=18):
...     print('チケットを売る')
... else:
...     print('チケットを売らない')
...
チケットを売らない
>>>

else～ifを追加
>>> age = 70
>>> if(age>=70):
...     print('チケットは1000円です')
... elif(age>=18):
...     print('チケットは1800円です')
... else:
...     print('チケットは売れません')
...
チケットは1000円です
>>>

条件分岐を工夫する
>>> age = 50
>>> if(age>=18 & age<=59):
...     print('チケットは1800円です')
... elif(age>=60):
...     print('チケットは1000円です')
... else:
...     print('チケットは売れません')
...
チケットは1800円です
>>>

複数の条件分岐
>>> pointcard = True
>>> count = 5
>>> if(pointcard == True):
...     if(count == 5):
...         print('いつもありがとうございます。今回は1000円です')
...
いつもありがとうございます。今回は1000円です
>>>

複数の条件分岐を入れ子でなくまとめて記述
>>> pointcard = True
>>> count = 5
>>> (pointcard = True)
  File "<stdin>", line 1
    (pointcard = True)
               ^
SyntaxError: invalid syntax
>>> (pointcard == True)
True
>>> (count == 5)
True
>>> ((pointcard == True) and (count == 5))
True
>>>

片方がFalseの場合
>>> ((pointcard == True) and (count == 7))
False


>>> pointcard = True
>>> count = 5
>>> if ((pointcard == True) and (count == 5)):
...     print('いつもありがとうございます、今回は1000円です')
...
いつもありがとうございます、今回は1000円です
>>>


>>> age = 35
>>> pointcard = True
>>> count = 5
>>> if(age < 18):
...     print('チケットを売ることはできません')
... elif ((age >= 60) or (pointcard == True) and (count == 5)):
...     print('チケットは1000円です')
... else:
...     print('チケットは1800円です')
...
チケットは1000円です
>>>

□3-2 繰り返し
